1999-12-18  Matt Wilson  <msw@redhat.com>

	* gtkmodule.c (_wrap_gtk_clist_get_rows): removed function

	* generate/gtklists.defs (GtkCList): add field for rows

1999-12-16  Matt Wilson  <msw@redhat.com>

	* gtk.py (GtkCList.__getattr__): oops - left out the _gtk. part

1999-12-15  Matt Wilson  <msw@redhat.com>

	* gtk.py (GdkColor): added a function to create a GdkColor
	object.  You should use this if you don't want to allocate a color
	before passing it into functions that don't need an allocated
	color.

	* gtkmodule.c (_wrap_gdk_color_new, PyGdkColor_GetAttr): add a
	functions to create and modify a GdkColor object.

1999-12-15  Matt Wilson  <msw@redhat.com>

	* gtk.py (GtkCList.__getattr__): added 'rows' attribute.

	* gtkmodule.c (_wrap_gtk_clist_get_rows): added wrapper to get
	number of rows in a clist

	* gtkmodule.c (PyGtkStyle_New): If the GtkStyle passed in is NULL,
	return a None object.  This is a bit of a hack, but without it
	you'll fail NULL assertions when you attach to the style_set
	signal.

	* generate/gtkmisc.defs (gtk_pixmap_new): mask is null-ok.

	* generate/gtklists.defs (gtk_clist_set_pixmap): likewise.

	* pygtk.h (PyGdkBitmap_Check): define PyGdkBitmap_Check to be the
	same as PyGdkWindow_Check.

	* gtkmodule.c: -Wall cleanups

	* libglademodule.c (init_libglade): removed unused variable

	* gdkimlibmodule.c (_wrap_gdk_imlib_init): s/static/static int/

1999-12-12  Matt Wilson  <msw@redhat.com>

	* generate/generate.py (FunctionDefsParser.define_func): added new
	string_or_null type to check for NULL when passing strings back

1999-09-30  James Henstridge  <james@daa.com.au>

	* pygtk.spec: updated spec file.
	
	* NEWS: added news items
	
	* configure.in: updated version number.

	* libglademodule.c: don't segfault when a widget name does not exist.

1999-09-28  James Henstridge  <james@daa.com.au>

	* libglade.py: enable gnome functionality if it is available.

	* gtk.py (GtkEditable.__getattr__): added accessors to GtkEditable.
