@@ -1,3 +1,9 @@
+2000-01-05  Matt Wilson  <msw@redhat.com>
+
+	* gdkimlibmodule.c, gtkglmodule.c, gtkmodule.c: Patch from ChiDeok
+	Hwang <cdhwang@sr.hei.co.kr> to decref PyObjects retrieved by
+	PySequence_GetItem.
+
 1999-12-18  Matt Wilson  <msw@redhat.com>
 
 	* gtkmodule.c (_wrap_gtk_clist_get_rows): removed function
